css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  box-sizing: border-box;
  font-family: Ubuntu, sans-serif;
  font: normal 100%/1.3;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

header {
  background-color: #18294f;
  color: #6c8fe0;
}

h1 {
  color: #fff;
  font-size: 2rem;
  margin: 0;
  text-align: center;
  padding: .3em 0 .5em;
}

a {
  text-decoration: none;
  color: #6c8fe0;
}

nav ul {
  padding: 0;
  margin: 0;
}

nav li {
  list-style-type: none;
  font-size: 1.125rem;
  padding: .5em .75em;
}

@media only screen and (min-width: 25em) {

  html {
    font-size: 100%;
    line-height: 1.3;
  }

  nav ul {
    display: flex;
    flex-wrap: wrap;
  }

  nav li {
    text-align: center;
    width: 50%;
  }

}

@media only screen and (min-width: 38em) {

  html {
    font-size: 110%;
    line-height: 1.4;
  }

  nav ul {
    flex-wrap: nowrap;
  }

  nav li {
    width: 25%;
    white-space: nowrap;
  }

}

@media only screen and (min-width: 60em) {

  html {
    font-size: 120%;
    line-height: 1.5;
  }

}

@media only screen and (min-width: 90em) {

  html {
    font-size: 130%;
  }

}

